samples/_failures_safe/1761477941_733285_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e458463.c: In function ‘main’:
./samples/SAFE/__tmp_4e458463.c:169:11: error: expected ‘;’ at end of input
  169 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_4e458463.c:169:5: error: expected declaration or statement at end of input
  169 |     printf
      |     ^~~~~~
